--- a/image_selection/.vscode/settings.json
+++ b/image_selection/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\PROGRA~1\\QGIS31~1.14\\bin\\python.exe"
+    "python.pythonPath": "${env:ProgramFiles}/QGIS 3.16.14/bin/python.exe"
 }
