dialog renamed to main_window, in preparation for a second dialog

--- a/image_selection/pb_tool.cfg
+++ b/image_selection/pb_tool.cfg
@@ -48,10 +48,10 @@ plugin_path:
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py main.py dialog.py web_view.py map_view.py
+python_files: __init__.py main.py main_window.py web_view.py map_view.py
 
 # The main dialog file that is loaded (not compiled)
-main_dialog: dialog_base.ui
+main_dialog: main_window_base.ui
 
 # Other ui files for dialogs you create (these will be compiled)
 compiled_ui_files: 
