--- a/image_selection/.vscode/settings.json
+++ b/image_selection/.vscode/settings.json
@@ -1,6 +1,24 @@
 {
-    "python.pythonPath": "${env:ProgramFiles}/QGIS 3.16.14/bin/python.exe",
     "python.languageServer": "Pylance",
     "python.analysis.typeCheckingMode": "basic",
-    "python.formatting.autopep8Args": ["--max-line-length", "120"]
+    // Make Pylance find the "qgis" package.
+    // I don't know when and where QGIS adds this directory to the Python path - probably hard-coded.
+    // Alternatives:
+    // - start VS Code using a batch file:
+    //     CALL "%ProgramFiles%\QGIS 3.22.8\bin\python-qgis-ltr.bat" --version
+    //     start "VS Code" /B "%LOCALAPPDATA%\Programs\Microsoft VS Code\Code.exe" image_selection %*
+    //   It is unclear to me why calling python-qgis-ltr.bat beforehand helps, since it changes no Python-relevant environment variables.
+    // - store in ../.env see https://code.visualstudio.com/docs/python/environments#_environment-variables
+    //     PYTHONPATH=C:\Program Files\QGIS 3.22.8\apps\qgis-ltr\python
+    // https://code.visualstudio.com/docs/python/settings-reference#_code-analysis-settings
+    "python.analysis.extraPaths": [
+        "C:/Program Files/QGIS 3.22.8/apps/qgis-ltr/python",
+        "C:/Users/wk/AppData/Roaming/Python/Python39/site-packages"
+    ],
+    // Test with: editor-context-menu -> format-selection
+    // Look into the "OUTPUT" window -> "Python"
+    "python.formatting.autopep8Args": [
+        "--max-line-length",
+        "120"
+    ]
 }
