--- a/image_selection/image_selection.cfg
+++ b/image_selection/image_selection.cfg
@@ -1,5 +1,5 @@
 # Relative file paths are relative to the path of the loaded spread sheet.
 [PREVIEWS]
-rootDir = Microfilm
+rootDir = X:\guests\DoRIAH\common\ImageSelectionProjects\St.Pölten\Microfilm
 [IMAGES]
 rootDir = Images
