--- a/image_selection/.vscode/launch.json
+++ b/image_selection/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
       {
         // Need to install debugpy into QGIS's Python installation (in the OSGeo4W-Shell), or into the user-site-packages.
-        // PlugIn's __init__.py starts listening.
+        // image_selection.__init__.py starts listening.
         "name": "Python QGIS PlugIn",
         "type": "debugpy",
         "request": "attach",
