--- a/image_selection/image_selection.cfg
+++ b/image_selection/image_selection.cfg
@@ -1,4 +1,4 @@
-# Relative file paths are relative to the path of the loaded spread sheet.
+# Relative file paths are relative to the path of the loaded spread sheet of aerial image meta data.
 [PREVIEWS]
 rootDir = X:\guests\DoRIAH\common\ImageSelectionProjects\St.Pölten\Microfilm
 [IMAGES]
