Revert hard-coded adaptions for 4th user workshop

--- a/image_selection/image_selection.cfg
+++ b/image_selection/image_selection.cfg
@@ -1,5 +1,5 @@
 # Relative file paths are relative to the path of the loaded spread sheet of aerial image meta data.
 [PREVIEWS]
-rootDir = X:\guests\DoRIAH\common\ImageSelectionProjects\St.Pölten\Microfilm
+rootDir = Microfilm
 [IMAGES]
 rootDir = Images
